--- a/BottleRocket/BottleRocket.csproj
+++ b/BottleRocket/BottleRocket.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HexHelpers.cs" />
     <Compile Include="Tables\TeleportLocation.cs" />
+    <Compile Include="Tables\TrainDestination.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
