--- a/HackinTests2/HackinTests2.csproj
+++ b/HackinTests2/HackinTests2.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ItemTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TeleportTests.cs" />
+    <Compile Include="TrainDestinationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
