--- a/HackinTests2/BottleRocket.Core.Tests.csproj
+++ b/HackinTests2/BottleRocket.Core.Tests.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ItemTests.cs" />
+    <Compile Include="ItemMarshelerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TeleportTests.cs" />
     <Compile Include="TrainDestinationTests.cs" />
@@ -50,6 +50,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BottleRocket.Core\BottleRocket.Core.csproj">
+      <Project>{9b100112-3c7b-4c93-8c23-f15ffbfe48be}</Project>
+      <Name>BottleRocket.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\BottleRocket\BottleRocket.csproj">
       <Project>{1306bc10-3ed7-4b59-82d1-6d65ef5ccc6d}</Project>
       <Name>BottleRocket</Name>
